fix: menu overlay gap between products when height of products is less than 100% of height

--- a/appetieats/static/css/menu/menu.css
+++ b/appetieats/static/css/menu/menu.css
@@ -25,7 +25,7 @@
 
 .main-overlay {
     width: 100%;
-    height: 100%;
+    max-height: 100%;
     justify-content: flex-start;
     flex-flow: row wrap;
     overflow-y: auto;
@@ -72,6 +72,7 @@
 .product-width {
     width: 23%;
     flex: 0 0 auto;
+    margin-bottom: 1rem;
 }
 
 .menu-cart-container {
